# 360BallTracking

./: .gitignore  README.md  RobotController.cs  back_camera.config  client.py  connect.py  connect.py.bak  front_camera.config  robot.data  video_front_2022-07-31_15-45-06.avi
balltracking/: AprilTag.py  Camera.py  CameraGroup.py  Graphics.py  Main.py  MainSingleCam.py  NTConnection.py  Pipeline.py  Pipelines.py  Test.py  UI.py
balltracking/galimi/: Camera.py  Pipeline.py  __init__.py
balltrackingcpp/Galimi/: Camera.cpp  Camera.h  Main.cpp  Pipeline.cpp  Vec.cpp  Vec.h
cppBallTracking/: CMakeLists.txt
cppBallTracking/cppBallTracking/: CMakeLists.txt  Camera.cpp  Camera.h  cppBallTracking.cpp  cppBallTracking.h
